--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="modal-cont">
-            <textarea class="task-text" spellcheck="false" placeholder="Enter your task and then press Shift to create ticket"></textarea>
+            <textarea class="task-text" spellcheck="false" placeholder="First-> Select Color &#10;Second-> Enter Task &#10;Third-> Press Shift to Create Ticket"></textarea>
             <div class="priority-color-cont">
                 <div class="lightpink task-color"></div>
                 <div class="lightblue task-color"></div>
